@@ -94,5 +94,10 @@ else {
   die("Sessions are not enabled properly on this system.  zenTrack is exiting.");
 }
 
+header("Expires: Mon, 26 Jul 1997 05:00:00 GMT");    // Date in the past
+header("Last-Modified: " . gmdate("D, d M Y H:i:s") . " GMT"); // always modified
+header("Cache-Control: no-store, no-cache, must-revalidate");  // HTTP/1.1
+header("Pragma: no-cache");                          // HTTP/1.0
+  
 // you can't have any spaces after this closing tag!
 ?>
