@@ -20,7 +20,7 @@
       $list = $history->getList('project');
       if( count($list) ) {
         foreach($list as $k=>$v) {
-          print "<br><a href='$rootUrl/project.php?id=$k'>$k - ".substr($zen->ffv($v),0,10)."</a>\n";
+          print "<br><a href='$rootUrl/project.php?id=$k' title='".$zen->ffv($v)."'>$k - ".substr($zen->ffv($v),0,10)."</a>\n";
         }
       }
       else {
