@@ -10,13 +10,23 @@ It features a simple interface, fully adaptable administration
 and user experience, internationalization, platform and database 
 abstraction, and endless possibilities for project expansion. 
 --------------------
-
 ----- VERSION 2.6 (development) -----
+  Added missing menubox.htc file
+   - zentrack_2/www/menubox.htc 1.1
 
   Data types can now take quotes in name (admin section)
   Corrected quote problems from data types in create/edit forms
+   - zentrack_2/includes/ZenFieldMap.class 1.39
+   - zentrack_2/includes/headerInc.php 1.65
+   - zentrack_2/includes/nav.php 1.25
+   - zentrack_2/includes/templates/configForm.php 1.14
   
   Fixed access for ticket view using guest login account
+   - zentrack_2/includes/templates/ticketView.php 1.13
+   - zentrack_2/includes/templates/ticket_box.php 1.22
+   
+  Fixes for caching problems
+   - zentrack_2/includes/session_start.php
   
 
 ----- VERSION 2.6.PRE3 (2005-10-24)--
